cabal-version:      2.2
name:               amazonka-appsync
version:            1.6.1
synopsis:           Amazon AppSync SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2017-07-25@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.AppSync.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.AppSync" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-appsync

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.AppSync
    Network.AWS.AppSync.CreateApiCache
    Network.AWS.AppSync.CreateApiKey
    Network.AWS.AppSync.CreateDataSource
    Network.AWS.AppSync.CreateFunction
    Network.AWS.AppSync.CreateGraphqlApi
    Network.AWS.AppSync.CreateResolver
    Network.AWS.AppSync.CreateType
    Network.AWS.AppSync.DeleteApiCache
    Network.AWS.AppSync.DeleteApiKey
    Network.AWS.AppSync.DeleteDataSource
    Network.AWS.AppSync.DeleteFunction
    Network.AWS.AppSync.DeleteGraphqlApi
    Network.AWS.AppSync.DeleteResolver
    Network.AWS.AppSync.DeleteType
    Network.AWS.AppSync.FlushApiCache
    Network.AWS.AppSync.GetApiCache
    Network.AWS.AppSync.GetDataSource
    Network.AWS.AppSync.GetFunction
    Network.AWS.AppSync.GetGraphqlApi
    Network.AWS.AppSync.GetIntrospectionSchema
    Network.AWS.AppSync.GetResolver
    Network.AWS.AppSync.GetSchemaCreationStatus
    Network.AWS.AppSync.GetType
    Network.AWS.AppSync.Lens
    Network.AWS.AppSync.ListApiKeys
    Network.AWS.AppSync.ListDataSources
    Network.AWS.AppSync.ListFunctions
    Network.AWS.AppSync.ListGraphqlApis
    Network.AWS.AppSync.ListResolvers
    Network.AWS.AppSync.ListResolversByFunction
    Network.AWS.AppSync.ListTagsForResource
    Network.AWS.AppSync.ListTypes
    Network.AWS.AppSync.StartSchemaCreation
    Network.AWS.AppSync.TagResource
    Network.AWS.AppSync.Types
    Network.AWS.AppSync.Types.AdditionalAuthenticationProvider
    Network.AWS.AppSync.Types.ApiCache
    Network.AWS.AppSync.Types.ApiCacheStatus
    Network.AWS.AppSync.Types.ApiCacheType
    Network.AWS.AppSync.Types.ApiCachingBehavior
    Network.AWS.AppSync.Types.ApiKey
    Network.AWS.AppSync.Types.AuthenticationType
    Network.AWS.AppSync.Types.AuthorizationConfig
    Network.AWS.AppSync.Types.AuthorizationType
    Network.AWS.AppSync.Types.AwsIamConfig
    Network.AWS.AppSync.Types.CachingConfig
    Network.AWS.AppSync.Types.CognitoUserPoolConfig
    Network.AWS.AppSync.Types.ConflictDetectionType
    Network.AWS.AppSync.Types.ConflictHandlerType
    Network.AWS.AppSync.Types.DataSource
    Network.AWS.AppSync.Types.DataSourceType
    Network.AWS.AppSync.Types.DefaultAction
    Network.AWS.AppSync.Types.DeltaSyncConfig
    Network.AWS.AppSync.Types.DynamodbDataSourceConfig
    Network.AWS.AppSync.Types.ElasticsearchDataSourceConfig
    Network.AWS.AppSync.Types.FieldLogLevel
    Network.AWS.AppSync.Types.FunctionConfiguration
    Network.AWS.AppSync.Types.GraphqlApi
    Network.AWS.AppSync.Types.HttpDataSourceConfig
    Network.AWS.AppSync.Types.LambdaConflictHandlerConfig
    Network.AWS.AppSync.Types.LambdaDataSourceConfig
    Network.AWS.AppSync.Types.LogConfig
    Network.AWS.AppSync.Types.OpenIDConnectConfig
    Network.AWS.AppSync.Types.OutputType
    Network.AWS.AppSync.Types.PipelineConfig
    Network.AWS.AppSync.Types.RdsHttpEndpointConfig
    Network.AWS.AppSync.Types.RelationalDatabaseDataSourceConfig
    Network.AWS.AppSync.Types.RelationalDatabaseSourceType
    Network.AWS.AppSync.Types.Resolver
    Network.AWS.AppSync.Types.ResolverKind
    Network.AWS.AppSync.Types.SchemaStatus
    Network.AWS.AppSync.Types.SyncConfig
    Network.AWS.AppSync.Types.Type
    Network.AWS.AppSync.Types.TypeDefinitionFormat
    Network.AWS.AppSync.Types.UserPoolConfig
    Network.AWS.AppSync.UntagResource
    Network.AWS.AppSync.UpdateApiCache
    Network.AWS.AppSync.UpdateApiKey
    Network.AWS.AppSync.UpdateDataSource
    Network.AWS.AppSync.UpdateFunction
    Network.AWS.AppSync.UpdateGraphqlApi
    Network.AWS.AppSync.UpdateResolver
    Network.AWS.AppSync.UpdateType
    Network.AWS.AppSync.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.13  && <5

test-suite amazonka-appsync-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.AppSync
    Test.AWS.AppSync.Internal
    Test.AWS.Gen.AppSync

  build-depends:
    , amazonka              >=1.6.1 && <1.6.2
    , amazonka-appsync
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
