name:               amazonka-autoscaling-plans
version:            1.6.1
synopsis:           Amazon Auto Scaling Plans SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           Network, AWS, Cloud, Distributed Computing
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests,
  and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.AutoScalingPlans.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.AutoScalingPlans" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-autoscaling-plans

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.AutoScalingPlans
    Network.AWS.AutoScalingPlans.CreateScalingPlan
    Network.AWS.AutoScalingPlans.DeleteScalingPlan
    Network.AWS.AutoScalingPlans.DescribeScalingPlanResources
    Network.AWS.AutoScalingPlans.DescribeScalingPlans
    Network.AWS.AutoScalingPlans.GetScalingPlanResourceForecastData
    Network.AWS.AutoScalingPlans.Lens
    Network.AWS.AutoScalingPlans.Types
    Network.AWS.AutoScalingPlans.Types.ApplicationSource
    Network.AWS.AutoScalingPlans.Types.CustomizedLoadMetricSpecification
    Network.AWS.AutoScalingPlans.Types.CustomizedScalingMetricSpecification
    Network.AWS.AutoScalingPlans.Types.Datapoint
    Network.AWS.AutoScalingPlans.Types.ForecastDataType
    Network.AWS.AutoScalingPlans.Types.LoadMetricType
    Network.AWS.AutoScalingPlans.Types.MetricDimension
    Network.AWS.AutoScalingPlans.Types.MetricStatistic
    Network.AWS.AutoScalingPlans.Types.PolicyType
    Network.AWS.AutoScalingPlans.Types.PredefinedLoadMetricSpecification
    Network.AWS.AutoScalingPlans.Types.PredefinedScalingMetricSpecification
    Network.AWS.AutoScalingPlans.Types.PredictiveScalingMaxCapacityBehavior
    Network.AWS.AutoScalingPlans.Types.PredictiveScalingMode
    Network.AWS.AutoScalingPlans.Types.ScalableDimension
    Network.AWS.AutoScalingPlans.Types.ScalingInstruction
    Network.AWS.AutoScalingPlans.Types.ScalingMetricType
    Network.AWS.AutoScalingPlans.Types.ScalingPlan
    Network.AWS.AutoScalingPlans.Types.ScalingPlanResource
    Network.AWS.AutoScalingPlans.Types.ScalingPlanStatusCode
    Network.AWS.AutoScalingPlans.Types.ScalingPolicy
    Network.AWS.AutoScalingPlans.Types.ScalingPolicyUpdateBehavior
    Network.AWS.AutoScalingPlans.Types.ScalingStatusCode
    Network.AWS.AutoScalingPlans.Types.ServiceNamespace
    Network.AWS.AutoScalingPlans.Types.TagFilter
    Network.AWS.AutoScalingPlans.Types.TargetTrackingConfiguration
    Network.AWS.AutoScalingPlans.UpdateScalingPlan
    Network.AWS.AutoScalingPlans.Waiters

  reexported-modules: Network.AWS.Prelude
  build-depends:
      amazonka-core  >=1.6.1 && <1.6.2
    , base           >=4.13  && <5

test-suite amazonka-autoscaling-plans-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.AutoScalingPlans
    Test.AWS.AutoScalingPlans.Internal
    Test.AWS.Gen.AutoScalingPlans

  build-depends:
      amazonka-autoscaling-plans
    , amazonka-core               >=1.6.1 && <1.6.2
    , amazonka-test               >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
