name:                  amazonka-autoscaling
version:               1.5.0
synopsis:              Amazon Auto Scaling SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2017 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.AutoScaling" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-autoscaling

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.AutoScaling
        , Network.AWS.AutoScaling.AttachInstances
        , Network.AWS.AutoScaling.AttachLoadBalancerTargetGroups
        , Network.AWS.AutoScaling.AttachLoadBalancers
        , Network.AWS.AutoScaling.CompleteLifecycleAction
        , Network.AWS.AutoScaling.CreateAutoScalingGroup
        , Network.AWS.AutoScaling.CreateLaunchConfiguration
        , Network.AWS.AutoScaling.CreateOrUpdateTags
        , Network.AWS.AutoScaling.DeleteAutoScalingGroup
        , Network.AWS.AutoScaling.DeleteLaunchConfiguration
        , Network.AWS.AutoScaling.DeleteLifecycleHook
        , Network.AWS.AutoScaling.DeleteNotificationConfiguration
        , Network.AWS.AutoScaling.DeletePolicy
        , Network.AWS.AutoScaling.DeleteScheduledAction
        , Network.AWS.AutoScaling.DeleteTags
        , Network.AWS.AutoScaling.DescribeAccountLimits
        , Network.AWS.AutoScaling.DescribeAdjustmentTypes
        , Network.AWS.AutoScaling.DescribeAutoScalingGroups
        , Network.AWS.AutoScaling.DescribeAutoScalingInstances
        , Network.AWS.AutoScaling.DescribeAutoScalingNotificationTypes
        , Network.AWS.AutoScaling.DescribeLaunchConfigurations
        , Network.AWS.AutoScaling.DescribeLifecycleHookTypes
        , Network.AWS.AutoScaling.DescribeLifecycleHooks
        , Network.AWS.AutoScaling.DescribeLoadBalancerTargetGroups
        , Network.AWS.AutoScaling.DescribeLoadBalancers
        , Network.AWS.AutoScaling.DescribeMetricCollectionTypes
        , Network.AWS.AutoScaling.DescribeNotificationConfigurations
        , Network.AWS.AutoScaling.DescribePolicies
        , Network.AWS.AutoScaling.DescribeScalingActivities
        , Network.AWS.AutoScaling.DescribeScalingProcessTypes
        , Network.AWS.AutoScaling.DescribeScheduledActions
        , Network.AWS.AutoScaling.DescribeTags
        , Network.AWS.AutoScaling.DescribeTerminationPolicyTypes
        , Network.AWS.AutoScaling.DetachInstances
        , Network.AWS.AutoScaling.DetachLoadBalancerTargetGroups
        , Network.AWS.AutoScaling.DetachLoadBalancers
        , Network.AWS.AutoScaling.DisableMetricsCollection
        , Network.AWS.AutoScaling.EnableMetricsCollection
        , Network.AWS.AutoScaling.EnterStandby
        , Network.AWS.AutoScaling.ExecutePolicy
        , Network.AWS.AutoScaling.ExitStandby
        , Network.AWS.AutoScaling.PutLifecycleHook
        , Network.AWS.AutoScaling.PutNotificationConfiguration
        , Network.AWS.AutoScaling.PutScalingPolicy
        , Network.AWS.AutoScaling.PutScheduledUpdateGroupAction
        , Network.AWS.AutoScaling.RecordLifecycleActionHeartbeat
        , Network.AWS.AutoScaling.ResumeProcesses
        , Network.AWS.AutoScaling.SetDesiredCapacity
        , Network.AWS.AutoScaling.SetInstanceHealth
        , Network.AWS.AutoScaling.SetInstanceProtection
        , Network.AWS.AutoScaling.SuspendProcesses
        , Network.AWS.AutoScaling.TerminateInstanceInAutoScalingGroup
        , Network.AWS.AutoScaling.Types
        , Network.AWS.AutoScaling.UpdateAutoScalingGroup
        , Network.AWS.AutoScaling.Waiters

    other-modules:
          Network.AWS.AutoScaling.Types.Product
        , Network.AWS.AutoScaling.Types.Sum

    build-depends:
          amazonka-core == 1.5.0.*
        , base          >= 4.7     && < 5

test-suite amazonka-autoscaling-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.AutoScaling
        , Test.AWS.Gen.AutoScaling
        , Test.AWS.AutoScaling.Internal

    build-depends:
          amazonka-core == 1.5.0.*
        , amazonka-test == 1.5.0.*
        , amazonka-autoscaling
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
