cabal-version:      2.2
name:               amazonka-autoscaling
version:            1.6.1
synopsis:           Amazon Auto Scaling SDK.
homepage:           https://github.com/brendanhay/amazonka
bug-reports:        https://github.com/brendanhay/amazonka/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:          Copyright (c) 2013-2021 Brendan Hay
category:           AWS
build-type:         Simple
extra-source-files:
  fixture/*.proto
  fixture/*.yaml
  README.md
  src/.gitkeep

description:
  Derived from API version @2011-01-01@ of the AWS service descriptions, licensed under Apache 2.0.
  .
  The types from this library are intended to be used with <http://hackage.haskell.org/package/amazonka amazonka>,
  which provides mechanisms for specifying AuthN/AuthZ information, sending requests, and receiving responses.
  .
  It is recommended to use generic lenses or optics from packages such as <https://hackage.haskell.org/package/generic-lens generic-lens> or <https://hackage.haskell.org/package/optics optics> to modify optional fields and deconstruct responses.
  .
  Generated lenses for legacy behaviour can be found in "Network.AWS.AutoScaling.Lens"
  and are suitable for use with a lens package such as <http://hackage.haskell.org/package/lens lens> or <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
  .
  Additional types and functions from <https://hackage.haskell.org/package/amazonka-core amazonka-core> are re-exported by the "Network.AWS.Prelude" module in this package.
  .
  See "Network.AWS.AutoScaling" and the <https://aws.amazon.com/documentation/ AWS documentation> to get started.

source-repository head
  type:     git
  location: git://github.com/brendanhay/amazonka.git
  subdir:   amazonka-autoscaling

library
  default-language:   Haskell2010
  hs-source-dirs:     src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  exposed-modules:
    Network.AWS.AutoScaling
    Network.AWS.AutoScaling.AttachInstances
    Network.AWS.AutoScaling.AttachLoadBalancers
    Network.AWS.AutoScaling.AttachLoadBalancerTargetGroups
    Network.AWS.AutoScaling.BatchDeleteScheduledAction
    Network.AWS.AutoScaling.BatchPutScheduledUpdateGroupAction
    Network.AWS.AutoScaling.CancelInstanceRefresh
    Network.AWS.AutoScaling.CompleteLifecycleAction
    Network.AWS.AutoScaling.CreateAutoScalingGroup
    Network.AWS.AutoScaling.CreateLaunchConfiguration
    Network.AWS.AutoScaling.CreateOrUpdateTags
    Network.AWS.AutoScaling.DeleteAutoScalingGroup
    Network.AWS.AutoScaling.DeleteLaunchConfiguration
    Network.AWS.AutoScaling.DeleteLifecycleHook
    Network.AWS.AutoScaling.DeleteNotificationConfiguration
    Network.AWS.AutoScaling.DeletePolicy
    Network.AWS.AutoScaling.DeleteScheduledAction
    Network.AWS.AutoScaling.DeleteTags
    Network.AWS.AutoScaling.DeleteWarmPool
    Network.AWS.AutoScaling.DescribeAccountLimits
    Network.AWS.AutoScaling.DescribeAdjustmentTypes
    Network.AWS.AutoScaling.DescribeAutoScalingGroups
    Network.AWS.AutoScaling.DescribeAutoScalingInstances
    Network.AWS.AutoScaling.DescribeAutoScalingNotificationTypes
    Network.AWS.AutoScaling.DescribeInstanceRefreshes
    Network.AWS.AutoScaling.DescribeLaunchConfigurations
    Network.AWS.AutoScaling.DescribeLifecycleHooks
    Network.AWS.AutoScaling.DescribeLifecycleHookTypes
    Network.AWS.AutoScaling.DescribeLoadBalancers
    Network.AWS.AutoScaling.DescribeLoadBalancerTargetGroups
    Network.AWS.AutoScaling.DescribeMetricCollectionTypes
    Network.AWS.AutoScaling.DescribeNotificationConfigurations
    Network.AWS.AutoScaling.DescribePolicies
    Network.AWS.AutoScaling.DescribeScalingActivities
    Network.AWS.AutoScaling.DescribeScalingProcessTypes
    Network.AWS.AutoScaling.DescribeScheduledActions
    Network.AWS.AutoScaling.DescribeTags
    Network.AWS.AutoScaling.DescribeTerminationPolicyTypes
    Network.AWS.AutoScaling.DescribeWarmPool
    Network.AWS.AutoScaling.DetachInstances
    Network.AWS.AutoScaling.DetachLoadBalancers
    Network.AWS.AutoScaling.DetachLoadBalancerTargetGroups
    Network.AWS.AutoScaling.DisableMetricsCollection
    Network.AWS.AutoScaling.EnableMetricsCollection
    Network.AWS.AutoScaling.EnterStandby
    Network.AWS.AutoScaling.ExecutePolicy
    Network.AWS.AutoScaling.ExitStandby
    Network.AWS.AutoScaling.GetPredictiveScalingForecast
    Network.AWS.AutoScaling.Lens
    Network.AWS.AutoScaling.PutLifecycleHook
    Network.AWS.AutoScaling.PutNotificationConfiguration
    Network.AWS.AutoScaling.PutScalingPolicy
    Network.AWS.AutoScaling.PutScheduledUpdateGroupAction
    Network.AWS.AutoScaling.PutWarmPool
    Network.AWS.AutoScaling.RecordLifecycleActionHeartbeat
    Network.AWS.AutoScaling.ResumeProcesses
    Network.AWS.AutoScaling.SetDesiredCapacity
    Network.AWS.AutoScaling.SetInstanceHealth
    Network.AWS.AutoScaling.SetInstanceProtection
    Network.AWS.AutoScaling.StartInstanceRefresh
    Network.AWS.AutoScaling.SuspendProcesses
    Network.AWS.AutoScaling.TerminateInstanceInAutoScalingGroup
    Network.AWS.AutoScaling.Types
    Network.AWS.AutoScaling.Types.Activity
    Network.AWS.AutoScaling.Types.AdjustmentType
    Network.AWS.AutoScaling.Types.Alarm
    Network.AWS.AutoScaling.Types.AutoScalingGroup
    Network.AWS.AutoScaling.Types.AutoScalingInstanceDetails
    Network.AWS.AutoScaling.Types.BlockDeviceMapping
    Network.AWS.AutoScaling.Types.CapacityForecast
    Network.AWS.AutoScaling.Types.CustomizedMetricSpecification
    Network.AWS.AutoScaling.Types.DesiredConfiguration
    Network.AWS.AutoScaling.Types.Ebs
    Network.AWS.AutoScaling.Types.EnabledMetric
    Network.AWS.AutoScaling.Types.FailedScheduledUpdateGroupActionRequest
    Network.AWS.AutoScaling.Types.Filter
    Network.AWS.AutoScaling.Types.Instance
    Network.AWS.AutoScaling.Types.InstanceMetadataEndpointState
    Network.AWS.AutoScaling.Types.InstanceMetadataHttpTokensState
    Network.AWS.AutoScaling.Types.InstanceMetadataOptions
    Network.AWS.AutoScaling.Types.InstanceMonitoring
    Network.AWS.AutoScaling.Types.InstanceRefresh
    Network.AWS.AutoScaling.Types.InstanceRefreshLivePoolProgress
    Network.AWS.AutoScaling.Types.InstanceRefreshProgressDetails
    Network.AWS.AutoScaling.Types.InstanceRefreshStatus
    Network.AWS.AutoScaling.Types.InstanceRefreshWarmPoolProgress
    Network.AWS.AutoScaling.Types.InstancesDistribution
    Network.AWS.AutoScaling.Types.LaunchConfiguration
    Network.AWS.AutoScaling.Types.LaunchTemplate
    Network.AWS.AutoScaling.Types.LaunchTemplateOverrides
    Network.AWS.AutoScaling.Types.LaunchTemplateSpecification
    Network.AWS.AutoScaling.Types.LifecycleHook
    Network.AWS.AutoScaling.Types.LifecycleHookSpecification
    Network.AWS.AutoScaling.Types.LifecycleState
    Network.AWS.AutoScaling.Types.LoadBalancerState
    Network.AWS.AutoScaling.Types.LoadBalancerTargetGroupState
    Network.AWS.AutoScaling.Types.LoadForecast
    Network.AWS.AutoScaling.Types.MetricCollectionType
    Network.AWS.AutoScaling.Types.MetricDimension
    Network.AWS.AutoScaling.Types.MetricGranularityType
    Network.AWS.AutoScaling.Types.MetricStatistic
    Network.AWS.AutoScaling.Types.MetricType
    Network.AWS.AutoScaling.Types.MixedInstancesPolicy
    Network.AWS.AutoScaling.Types.NotificationConfiguration
    Network.AWS.AutoScaling.Types.PredefinedLoadMetricType
    Network.AWS.AutoScaling.Types.PredefinedMetricPairType
    Network.AWS.AutoScaling.Types.PredefinedMetricSpecification
    Network.AWS.AutoScaling.Types.PredefinedScalingMetricType
    Network.AWS.AutoScaling.Types.PredictiveScalingConfiguration
    Network.AWS.AutoScaling.Types.PredictiveScalingMaxCapacityBreachBehavior
    Network.AWS.AutoScaling.Types.PredictiveScalingMetricSpecification
    Network.AWS.AutoScaling.Types.PredictiveScalingMode
    Network.AWS.AutoScaling.Types.PredictiveScalingPredefinedLoadMetric
    Network.AWS.AutoScaling.Types.PredictiveScalingPredefinedMetricPair
    Network.AWS.AutoScaling.Types.PredictiveScalingPredefinedScalingMetric
    Network.AWS.AutoScaling.Types.ProcessType
    Network.AWS.AutoScaling.Types.RefreshPreferences
    Network.AWS.AutoScaling.Types.RefreshStrategy
    Network.AWS.AutoScaling.Types.ScalingActivityStatusCode
    Network.AWS.AutoScaling.Types.ScalingPolicy
    Network.AWS.AutoScaling.Types.ScalingProcessQuery
    Network.AWS.AutoScaling.Types.ScheduledUpdateGroupAction
    Network.AWS.AutoScaling.Types.ScheduledUpdateGroupActionRequest
    Network.AWS.AutoScaling.Types.StepAdjustment
    Network.AWS.AutoScaling.Types.SuspendedProcess
    Network.AWS.AutoScaling.Types.Tag
    Network.AWS.AutoScaling.Types.TagDescription
    Network.AWS.AutoScaling.Types.TargetTrackingConfiguration
    Network.AWS.AutoScaling.Types.WarmPoolConfiguration
    Network.AWS.AutoScaling.Types.WarmPoolState
    Network.AWS.AutoScaling.Types.WarmPoolStatus
    Network.AWS.AutoScaling.UpdateAutoScalingGroup
    Network.AWS.AutoScaling.Waiters

  reexported-modules: Network.AWS
  build-depends:
    , amazonka  >=1.6.1 && <1.6.2
    , base      >=4.13  && <5

test-suite amazonka-autoscaling-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  ghc-options:      -Wall -threaded

  -- This section is encoded by the template and any modules added by
  -- hand outside these namespaces will not correctly be added to the
  -- distribution package.
  other-modules:
    Test.AWS.AutoScaling
    Test.AWS.AutoScaling.Internal
    Test.AWS.Gen.AutoScaling

  build-depends:
    , amazonka              >=1.6.1 && <1.6.2
    , amazonka-autoscaling
    , amazonka-test         >=1.6.1 && <1.6.2
    , base
    , bytestring
    , case-insensitive
    , tasty
    , tasty-hunit
    , text
    , time
    , unordered-containers
