name:                  amazonka-budgets
version:               1.4.4
synopsis:              Amazon Budgets SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013-2016 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.AWSBudgets" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazonka.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.AWS.AWSBudgets
        , Network.AWS.AWSBudgets.CreateBudget
        , Network.AWS.AWSBudgets.CreateNotification
        , Network.AWS.AWSBudgets.CreateSubscriber
        , Network.AWS.AWSBudgets.DeleteBudget
        , Network.AWS.AWSBudgets.DeleteNotification
        , Network.AWS.AWSBudgets.DeleteSubscriber
        , Network.AWS.AWSBudgets.DescribeBudget
        , Network.AWS.AWSBudgets.DescribeBudgets
        , Network.AWS.AWSBudgets.DescribeNotificationsForBudget
        , Network.AWS.AWSBudgets.DescribeSubscribersForNotification
        , Network.AWS.AWSBudgets.Types
        , Network.AWS.AWSBudgets.UpdateBudget
        , Network.AWS.AWSBudgets.UpdateNotification
        , Network.AWS.AWSBudgets.UpdateSubscriber
        , Network.AWS.AWSBudgets.Waiters

    other-modules:
          Network.AWS.AWSBudgets.Types.Product
        , Network.AWS.AWSBudgets.Types.Sum

    build-depends:
          amazonka-core == 1.4.4.*
        , base          >= 4.7     && < 5

test-suite amazonka-budgets-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.AWSBudgets
        , Test.AWS.Gen.AWSBudgets
        , Test.AWS.AWSBudgets.Internal

    build-depends:
          amazonka-core == 1.4.4.*
        , amazonka-test == 1.4.4.*
        , amazonka-budgets == 1.4.4.*
        , base
        , bytestring
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
